--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                   <h1>我们换网址啦，请及时收藏</h1>
                    <h5> 本域名即将失效 </h5> 
               <span id="error-link"></span>
-                     <h2>新网址>>><a href="https://appexplore.github.io/homepage-selectlist/">https://appexplore.github.io/homepage-selectlist/</a></h2>
+                     <h2>新网址>>><a href="https://cwalxz.coding-pages.com">https://cwalxz.coding-pages.com</a></h2>
 </div>
         </div>
 
@@ -33,8 +33,8 @@
                  <div class="col-md-8 col-md-offset-2">
                      
                      <h3> <i  class="fa fa-lightbulb-o fa-5x"></i> </h3>
-               <a href="https://appexplore.github.io/homepage-selectlist/" class="btn btn-primary">前往新的网址</a> 
-             <br/><br/>Copyright © 2020 <a href="https://appexplore.github.io/homepage-selectlist/" style="color:#ffffff;" rel="nofollow">选择主页</a>
+               <a href="https://cwalxz.coding-pages.com" class="btn btn-primary">前往新的网址</a> 
+             <br/><br/>Copyright © 2020 <a href="https://cwalxz.coding-pages.com" style="color:#ffffff;" rel="nofollow">选择主页</a>
 </div>
         </div>
 
