--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="author" content="">
     <title>本站已更换网址</title>
     <!-- Bootstrap core CSS -->
-    <link href="https://cdn.staticfile.org/twitter-bootstrap/4.4.1/css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <!-- FONT AWESOME CSS -->
     <link href="https://cdn.staticfile.org/font-awesome/5.12.1/css/fontawesome.min.css" rel="stylesheet" />
     <!--GOOGLE FONT -->
-	<link href='https://fonts.googleapis.com/css?family=Nova+Flat' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Nova+Flat' rel='stylesheet' type='text/css'>
     <!-- custom CSS here -->
     <link href="css/style.css" rel="stylesheet" />
 </head>
