--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="author" content="">
     <title>本站已更换网址</title>
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="https://cdn.staticfile.org/twitter-bootstrap/3.1.1/css/bootstrap.css" rel="stylesheet">
     <!-- FONT AWESOME CSS -->
-    <link href="https://cdn.staticfile.org/font-awesome/5.12.1/css/fontawesome.min.css" rel="stylesheet" />
+    <link href="https://cdn.staticfile.org/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" />
     <!--GOOGLE FONT -->
     <link href='https://fonts.googleapis.com/css?family=Nova+Flat' rel='stylesheet' type='text/css'>
     <!-- custom CSS here -->
@@ -43,7 +43,7 @@
     <!--Core JavaScript file  -->
     <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.js"></script>
     <!--bootstrap JavaScript file  -->
-    <script src="https://cdn.staticfile.org/twitter-bootstrap/4.4.1/js/bootstrap.js"></script>
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.1.1/js/bootstrap.js"></script>
      <!--Count Number JavaScript file  -->
     <script src="js/countUp.js"></script>
        <!--Custom JavaScript file  -->
