--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <!--bootstrap JavaScript file  -->
     <script src="https://cdn.staticfile.org/twitter-bootstrap/3.1.1/js/bootstrap.js"></script>
      <!--Count Number JavaScript file  -->
-    <script src="js/countUp.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/appexplore/404/js/countUp.min.js"></script>
        <!--Custom JavaScript file  -->
-    <script src="js/custom.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/appexplore/404/js/custom.min.js"></script>
 </body>
 </html>
