--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
     <title>本站已更换网址</title>
+    <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/appexplore/404/favicon.ico">
     <!-- Bootstrap core CSS -->
-    <link href="https://cdn.staticfile.org/twitter-bootstrap/3.1.1/css/bootstrap.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/gh/appexplore/404/css/bootstrap.min.css" rel="stylesheet">
     <!-- FONT AWESOME CSS -->
-    <link href="https://cdn.staticfile.org/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/gh/appexplore/404/css/font-awesome.min.css" rel="stylesheet" />
     <!--GOOGLE FONT -->
     <link href='https://fonts.googleapis.com/css?family=Nova+Flat' rel='stylesheet' type='text/css'>
     <!-- custom CSS here -->
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/gh/appexplore/404/css/style.min.css" rel="stylesheet" />
 </head>
 <body>
     <div class="container">
@@ -41,9 +42,9 @@
   
   
     <!--Core JavaScript file  -->
-    <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.js"></script>
+    <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
     <!--bootstrap JavaScript file  -->
-    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.1.1/js/bootstrap.js"></script>
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
      <!--Count Number JavaScript file  -->
     <script src="https://cdn.jsdelivr.net/gh/appexplore/404/js/countUp.min.js"></script>
        <!--Custom JavaScript file  -->
